# libbc1

./: .clang-format  Makefile.am  README.md  bc1.c  bc1.h  configure.ac  dna.json  dna.yaml  readme.txt
