# Copyright (c) 2021 Bimal Bhagrath
# MIT License. See COPYING for more details.

lib_LTLIBRARIES = libbc1.la
libbc1_la_SOURCES = bc1.c
libbc1_la_LDFLAGS = -version-info $(LIBBC1_SO_VERSION) -no-undefined

libbc1_includedir = $(includedir)
libbc1_include_HEADERS = bc1.h

dist_doc_DATA = COPYING README.md
